<resources>
    <string name="app_name">AppNumercico</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_grafica">Gráfica</string>
    <string name="title_activity_busq_inc">Búsqueda Incremental</string>
    <string name="title_activity_bisecc">Bisección</string>
    <string name="title_activity_regla_fal">Regla Falsa</string>
    <string name="title_activity_punto_fijo">Punto Fijo</string>
    <string name="title_activity_newto">Newton</string>
    <string name="title_activity_secant">Secante</string>
    <string name="title_activity_raices_mult">Raices Múltiples</string>
    <string name="title_activity_matriz">Matriz</string>
    <string name="title_activity_interpolacion">Interpolación</string>
    <string name="title_activity_sistemas_de_ecuaciones">Sistemas De Ecuaciones</string>

    <string name="xiviewBis">Xi</string>
    <string name="xitextBis">x inicial</string>
    <string name="xsviewBis">Xs</string>
    <string name="xstextBis">x final</string>
    <string name="tolviewBis">Tolerancia</string>
    <string name="toltextBis">valor tolerancia</string>
    <string name="iterviewBis">Iteraciones</string>
    <string name="itertextBis"># iteraciones</string>

    <string name="x0viewBusq">X0</string>
    <string name="x0textBusq">x inicial</string>
    <string name="delviewBusq">Delta</string>
    <string name="deltextBusq">valor delta</string>
    <string name="iterviewBusq">Iteraciones</string>
    <string name="itertextBusq"># iteraciones</string>

    <string name="xiviewReg">Xi</string>
    <string name="xitextReg">x inicial</string>
    <string name="xsviewReg">Xs</string>
    <string name="xstextReg">x final</string>
    <string name="tolviewReg">Tolerancia</string>
    <string name="toltextReg">valor tolerancia</string>
    <string name="iterviewReg">Iteraciones</string>
    <string name="itertextReg"># iteraciones</string>

    <string name="xnviewPfijo">Xn</string>
    <string name="xntextPfijo">x inicial</string>
    <string name="tolviewPfijo">Tolerancia</string>
    <string name="toltextPfijo">valor tolerancia</string>
    <string name="iterviewPfijo">Iteraciones</string>
    <string name="itertextPfijo"># iteraciones</string>

    <string name="title_activity_integracion">Integracion</string>

    <string name="xnviewNewton">Xn</string>
    <string name="xntextNewton">x inicial</string>
    <string name="tolviewNewton">Tolerancia</string>
    <string name="toltextNewton">valor tolerancia</string>
    <string name="iterviewNewton">Iteraciones</string>
    <string name="itertextNewton"># iteraciones</string>

    <string name="x0viewSecante">X0</string>
    <string name="x0textSecante">x0</string>
    <string name="x1viewSecante">X1</string>
    <string name="x1textSecante">x1</string>
    <string name="tolviewSecante">Tolerancia</string>
    <string name="toltextSecante">valor tolerancia</string>
    <string name="iterviewSecante">Iteraciones</string>
    <string name="itertextSecante"># iteraciones</string>

    <string name="xnviewRMultiples">Xn</string>
    <string name="xntextRMultiples">x inicial</string>
    <string name="tolviewRMultiples">Tolerancia</string>
    <string name="toltextRMultiples">valor tolerancia</string>
    <string name="iterviewRMultiples">Iteraciones</string>
    <string name="itertextRMultiples"># iteraciones</string>
</resources>
