<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_busq_inc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.davidmedinaospina.appnumercico.BusqInc"
    tools:showIn="@layout/activity_busq_inc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/x0textBusq"
                        android:text="@string/x0viewBusq"/>
                    <EditText
                        android:layout_height="match_parent"
                        android:id="@+id/x0numberBusq"
                        android:layout_width="match_parent"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/x0textBusq" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/deltextBusq"
                        android:text="@string/delviewBusq"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/delnumberBusq"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/deltextBusq" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/itertextBusq"
                        android:text="@string/iterviewBusq"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/iternumberBusq"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/itertextBusq" />
                </TableRow>
            </TableLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_weight="1"
                android:fillViewport="true">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/busqInc_table">

                </TableLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/busqInc_result"
                android:layout_margin="50sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
