<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_newto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.davidmedinaospina.appnumercico.Newto"
    tools:showIn="@layout/activity_newto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/xntextNewton"
                        android:text="@string/xnviewNewton"/>
                    <EditText
                        android:layout_height="match_parent"
                        android:id="@+id/xnnumberNewton"
                        android:layout_width="match_parent"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/xntextNewton" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/toltextNewton"
                        android:text="@string/tolviewNewton"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tolnumberNewton"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/toltextNewton" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/itertextNewton"
                        android:text="@string/iterviewNewton"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/iternumberNewton"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/itertextNewton" />
                </TableRow>
            </TableLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_weight="1"
                android:fillViewport="true">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newton_table">

                </TableLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newton_result"
                android:layout_margin="50sp"/>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
