<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_punto_fijo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.davidmedinaospina.appnumercico.PuntoFijo"
    tools:showIn="@layout/activity_punto_fijo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/xntextPfijo"
                        android:text="@string/xnviewPfijo"/>
                    <EditText
                        android:layout_height="match_parent"
                        android:id="@+id/xnnumberPfijo"
                        android:layout_width="match_parent"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/xntextPfijo" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/toltextPfijo"
                        android:text="@string/tolviewPfijo"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tolnumberPfijo"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/toltextPfijo" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:id="@+id/itertextPfijo"
                        android:text="@string/iterviewPfijo"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/iternumberPfijo"
                        android:inputType="numberSigned|numberDecimal"
                        android:hint="@string/itertextPfijo" />
                </TableRow>
            </TableLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_weight="1"
                android:fillViewport="true">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pfijo_table">

                </TableLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pfijo_result"
                android:layout_margin="50sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
